@@ -1,3 +1,9 @@
+2017-08-09  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/81687
+	* testsuite/libgomp.c/pr81687-1.c: New test.
+	* testsuite/libgomp.c/pr81687-2.c: New test.
+
 2017-08-07  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/69389
